tests/reference/ast-expr9-ba35d31.stderr
syntax error: Token '(' is unexpected here
 --> tests/expr9.f90:3:11
  |
3 | .INVERSE. (A + B)
  |           ^ 
